# traefik-gui

./: .env  .gitignore  Cargo.toml  Dockerfile  Readme.md  Rocket.toml  diesel.toml  docker-compose.yaml  package-lock.json  package.json
.github/workflows/: docker-publish.yml
db/: config.yaml
migrations/2024-12-20-110752_create_tables/: down.sql  up.sql
migrations/2024-12-29-013231_create_tables/: down.sql  up.sql
migrations/2025-02-24-102626_https/: down.sql  up.sql
src/: config.rs  http.rs  https.rs  main.rs  schema.rs  tls.rs  traefik.rs
templates/: base.html.tera  config.html.tera  http.html.tera  https.html.tera  index.html.tera  nav.html.tera  tls.html.tera
templates/static/: style.css
traefik/: dynamic_config.yml  gui.yml
