[package]
name = "traefik-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.6", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0.9"
