[package]
name = "traefik-gui"
version = "0.1.2"
edition = "2021"

[dependencies]
diesel = { version = "2.3.4", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
rusqlite = { version = "0.37", features = ["bundled"] }
thiserror = "2.0.17"
itertools = "0.14.0"
